# gtest_simple_demo

./: README.md
empty_gtest/: README.md
gilded_rose/: .gitignore  CMakeLists.txt  README.md
gilded_rose/src/: GildedRose.cc  GildedRose.h
gilded_rose/src/GildedRose/: GildedRose.cc  GildedRose.h
gilded_rose/src/Item/: Item.cc  Item.h
gilded_rose/test/: gildedRoseTest.cc
katas/: BowlingScoring.md  FizzBuzz.md  RomanToArabic.md
